--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FZ92LQWFHL"></script>
+  <script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-FZ92LQWFHL');
+  </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -512,7 +522,7 @@
 							<div class="mu-contact-header">
 								<h2 class="mu-heading-title">CONTACT ME</h2>
 								<span class="mu-header-dot"></span>
-								<p>choolog@outlook.com</p>
+								<p>choonlog@outlook.com</p>
 							</div>
 
 						</div>
