--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		      </button>
 
 		      <!-- Text Logo -->
-		      <a class="navbar-brand" href="#">With_LEE</a>
+		      <a class="navbar-brand" href="#">9 + 2</a>
 
 		      <!-- Image Logo -->
 		      <!-- <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a> -->
