--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					<div class="col-md-12">
 						<div class="mu-testimonials-area">
 							<div class="mu-testimonial-header">
-								<h2 class="mu-heading-title">Client Testimonials</h2>
+								<h2 class="mu-heading-title">Customer Reviews</h2>
 								<span class="mu-header-dot"></span>
 							</div>
 
