--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 									<!-- Service Single Content -->
 									<div class="col-md-4 col-sm-6">
 										<div class="mu-service-content-single">
-											<h4>장수</h4>
+											<h4>챕터수</h4>
 											<h1 style="color:#95a5a6;">45</h1>
 										</div>
 									</div>
