--- a/index.html
+++ b/index.html
@@ -141,49 +141,49 @@
 
 								<li>
 									<i class="fa fa-quote-right mu-quote-icon"></i>
-									<p>딥러닝을 공부하면서 궁금했던 부분들이 해소가 되지 않았는데, 그 의문을 해소해 주는 고마운 책입니다. 저자님, 좋은 자료를 공유해 주셔서 감사합니다.</p>
+									<p>딥러닝을 공부하면서 궁금했던 부분들이 해소가 되지 않았는데,<br />그 의문을 해소해 주는 고마운 책입니다.<br />저자님, 좋은 자료를 공유해 주셔서 감사합니다.</p>
 									<h5 class="mu-ct-name"> - 일*****</h5>
 									<span class="mu-ct-title">21.11.30 14:29</span>
 								</li>
 
 								<li>
 									<i class="fa fa-quote-right mu-quote-icon"></i>
-									<p>결과물의 퀄리티와정성에 놀랐습니다. 감사합니다.</p>
+									<p>결과물의 퀄리티와정성에 놀랐습니다.<br />감사합니다.</p>
 									<h5 class="mu-ct-name"> - 감*****</h5>
 									<span class="mu-ct-title">21.12.09 09:57</span>
 								</li>
 
 								<li>
 									<i class="fa fa-quote-right mu-quote-icon"></i>
-									<p>이해가 잘 안되던 부분도 이해하기 쉽게 정리가 되어 있어서  공부에 많은 도움이 될 것 같습니다. 감사합니다.</p>
+									<p>이해가 잘 안되던 부분도 이해하기 쉽게 정리가 되어 있어서 공부에 많은 도움이 될 것 같습니다.<br />감사합니다.</p>
 									<h5 class="mu-ct-name"> - 튼*****</h5>
 									<span class="mu-ct-title">21.06.16 02:42</span>
 								</li>
 
 								<li>
 									<i class="fa fa-quote-right mu-quote-icon"></i>
-									<p>작업물 받자마자 내용을 떠나서 노트에 공들이신 시간과 노력은 돈으로 환산할 수 없겠다라는 생각이 들었습니다. 열심히 공부하겠습니다. 감사합니다 ^^</p>
+									<p>작업물 받자마자 내용을 떠나서 노트에 공들이신 시간과 노력은 돈으로 환산할 수 없겠다라는 생각이 들었습니다.<br />열심히 공부하겠습니다.<br />감사합니다 ^^</p>
 									<h5 class="mu-ct-name"> - 지*****</h5>
 									<span class="mu-ct-title">21.05.08 22:57</span>
 								</li>
 
 								<li>
 									<i class="fa fa-quote-right mu-quote-icon"></i>
-									<p>하고 싶었던 공부를, 알차고 빠르게 할 수 있게 된 것 같습니다. 잘 볼게요~ 감사합니다!!</p>
+									<p>하고 싶었던 공부를, 알차고 빠르게 할 수 있게 된 것 같습니다.<br />잘 볼게요~ 감사합니다!!</p>
 									<h5 class="mu-ct-name"> - K10*****</h5>
 									<span class="mu-ct-title">21.03.04 13:12</span>
 								</li>
 
 								<li>
 									<i class="fa fa-quote-right mu-quote-icon"></i>
-									<p>무작정 프레임워크로 개발만 했던 저의 부실한 기초 개념을 튼튼히 보강해준 고마운 노트입니다. 가독성도 좋고 여러 그래프등 시각적인 자료들도 많아 이해하기가 수월했습니다! 좋은 자료 주셔서 감사합니다!  열심히 공부할게요ㅎㅎ</p>
+									<p>무작정 프레임워크로 개발만 했던 저의 부실한 기초 개념을 튼튼히 보강해준 고마운 노트입니다.<br />가독성도 좋고 여러 그래프등 시각적인 자료들도 많아 이해하기가 수월했습니다!<br />좋은 자료 주셔서 감사합니다!<br />열심히 공부할게요ㅎㅎ</p>
 									<h5 class="mu-ct-name"> - 따*****</h5>
 									<span class="mu-ct-title">21.01.20 19:45</span>
 								</li>
 
 								<li>
 									<i class="fa fa-quote-right mu-quote-icon"></i>
-									<p>귀중한 자료를 바탕으로 공부를 시작하니 왠지 든든한 나만의 비밀 공책을 확보한 느낌이여서 든든한 기분이 드네요. 좋은 자료 너무 감사드리고, 열심히 공부하겠습니다~^^ 감사합니다!</p>
+									<p>귀중한 자료를 바탕으로 공부를 시작하니 왠지 든든한 나만의 비밀 공책을 확보한 느낌이여서 든든한 기분이 드네요.<br />좋은 자료 너무 감사드리고, 열심히 공부하겠습니다~^^<br />감사합니다!</p>
 									<h5 class="mu-ct-name"> - K84*****</h5>
 									<span class="mu-ct-title">20.11.12 14:28</span>
 								</li>
