--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav mu-menu navbar-right">
 						<li><a href="#">HOME</a></li>
-						<li><a href="#mu-testimonials">TESTIMONIALS</a></li>
+						<li><a href="#mu-testimonials">REVIEWS</a></li>
 						<li><a href="#mu-service">STATISTICS</a></li>
 						<li><a href="#mu-portfolio">CONTENTS</a></li>
 						<li><a href="#mu-contact">CONTACT</a></li>
