--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 					<ul class="nav navbar-nav mu-menu navbar-right">
 						<li><a href="#">HOME</a></li>
 						<li><a href="#mu-testimonials">REVIEWS</a></li>
+						<li><a href="#mu-about">ABOUT US</a></li>
 						<li><a href="#mu-service">STATISTICS</a></li>
 						<li><a href="#mu-portfolio">CONTENTS</a></li>
 						<li><a href="#mu-contact">CONTACT</a></li>
