--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 					<div class="mu-featured-content">
 						<p>다른 곳에서 찾지말자<br />이 한 권으로 충분하니깐</p>
-						<a href="https://kmong.com/gig/225298" class="mu-primary-btn">VIEW MY WORK</a>
+						<a href="https://kmong.com/gig/225298" class="mu-primary-btn">Get it now</a>
 					</div>
 
 				</div>
