--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 					<div class="mu-featured-content">
 						<p>다른 곳에서 찾지말자<br />이 한 권으로 충분하니깐</p>
-						<a href="https://kmong.com/gig/225298" class="mu-primary-btn">GET IT NOW</a>
+						<a href="https://kmong.com/gig/225298" class="mu-primary-btn">VIEW MY WORK</a>
 					</div>
 
 				</div>
@@ -210,7 +210,7 @@
 							<h2 class="mu-heading-title">ABOUT ME</h2>
 							<span class="mu-header-dot"></span>
 							<p>Deep Learning Note(딥러닝노트)는 이 분야의 권위자가 아닌 얼마 전까지 입문자였던 자가 직접 부딪히며 알게 된 딥러닝 지식을 입문자의 눈높이에서 알기 쉽게 정리한 PDF 전자책입니다.<br /><br />맨땅에 헤딩하여 알게된 딥러닝 지식을 PDF 전자책 형태로 만나보세요.<br />딥러닝을 가장 쉽고 빠르게 배울 수 있는 한 가지 대안.<br /><br />지금 당장 만나보세요.<br /><br /><strong>대상독자</strong><br />1. 딥러닝을 배우고자 하는 누구나.<br />2. 딥러닝 공부의 1차 문턱인 backpropagation 또는 2차 문턱인 variational autoencoder(VAE)을 넘지 못하고 포기하신 분.<br />3. MSE, cross-entropy 등 딥러닝 기본 지식의 수학적 배경이 궁금하신 분(무엇이든지 대충 넘어갈 수 없는 분).<br /><strong>*배경지식이 전혀 없어도 좋습니다</strong>(딥러닝학습에 꼭 필요한 수학지식도 "딥러닝노트"에 이미 포함되어 있습니다).</p>
-							<img src="assets/images/book.jpg" />
+							<a rel="nofollow" href="https://kmong.com/gig/225298"><img src="assets/images/book.jpg" /></a>
 						</div>
 						<!-- End About Us Content -->
 
@@ -332,11 +332,11 @@
 						<!-- Start Portfolio Content -->
 						<div class="mu-portfolio-content">
 							<div class="filtr-container">
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F9EBEA;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F5EEF8;">
 									0. 서문
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FDEDEC;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FDFEFE;">
 									1. Deep Learning으로 무엇을 하고자 하는가?
 								</div>
 
@@ -344,51 +344,51 @@
 									2. Deep Learning에서 사용하는 data 형식
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F4ECF7;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FDFEFE;">
 									3. Linear Regression 및 Gradient Descent Algorithm
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #EAF2F8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F5EEF8;">
 									4. 미분
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #EBF5FB;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FDFEFE;">
 									5. Matrix 연산
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F9E79F;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F5EEF8;">
 									6. Linear and Nonlinear
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #E8F8F5;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #FDFEFE;">
 									7. Binary Logistic Regression
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #E8F6F3;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #F5EEF8;">
 									8. Multinomial Logistic Regression(Softmax Regression)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #E9F7EF;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #FDFEFE;">
 									9. Multi-Label Classification
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #EAFAF1;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F5EEF8;">
 									10. Perceptron
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FEF9E7;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
 									11. Loss function
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FEF5E7;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F5EEF8;">
 									12. Model에 따라 hypothesis와 loss function은 다르다
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDF2E9;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
 									13. Binary classification model에서 loss function을 MSE로 사용하면 안되나 hoxy?
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #FBEEE6;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #F5EEF8;">
 									14. Representation
 								</div>
 
@@ -396,127 +396,127 @@
 									15. Categorical Input Handling
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #F8F9F9;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #F5EEF8;">
 									16. Embedding
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F4F6F6;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
 									17. Backpropagation Algorithm
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F2F4F4;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F5EEF8;">
 									18. Gradient Descent Algorithm 적용방식
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #EBEDEF;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
 									19. 학습과정 한 눈에 살펴보기(regression model)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #EAECEE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F5EEF8;">
 									20. Weight Initialization
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F2D7D5;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
 									21. Matrix Multiplication(normal distribution 곱하기 normal distribution)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FADBD8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
 									22. Zero-gradient 발생원인 분석
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #EBDEF0;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FDFEFE;">
 									23. Overfitting
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #E8DAEF;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
 									24. Regularization 작동원리
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #D4E6F1;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FDFEFE;">
 									25. Batch Normalization
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #D4E6F1;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
 									26. Layer Normalization
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #D6EAF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FDFEFE;">
 									27. Covariate Shift
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #D1F2EB;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
 									28. Feature별 scale(distribution) 차이가 크게 나면 learning speed가 느려지는 이유
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #D0ECE7;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FDFEFE;">
 									29. Coefficient of Determination
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #D4EFDF;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
 									30. Classification Model Evaluation Metric(평가지표)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #D5F5E3;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
 									31. Convolutional Neural Networks(CNN)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FCF3CF;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F5EEF8;">
 									32. Recurrent Neural Networks(RNN)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDEBD0;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
 									33. Transfer Learning
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FAE5D3;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F5EEF8;">
 									34. Deep Residual Learning
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F6DDCC;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
 									35. Similarity, Correlation, and Covariance
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FBFCFC;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F5EEF8;">
 									36. Image Style Transfer
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F2F3F4;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
 									37. Information Theory
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #EAEDED;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F5EEF8;">
 									38. Machine learning 과정 한 눈에 살펴보기
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #E5E8E8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
 									38. Machine learning 과정 한 눈에 살펴보기
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #D6DBDF;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #F5EEF8;">
 									39. Set
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #D5D8DC;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #FDFEFE;">
 									40. Probability
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #E6B0AA;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #F5EEF8;">
 									41. Bayes" Theorem
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #F5B7B1;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #FDFEFE;">
 									42. Maximum Likelihood Estimation(MLE)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #D7BDE2;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #F5EEF8;">
 									43. Autoencoder
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #D2B4DE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #FDFEFE;">
 									44. Variational Autoencoder(VAE)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #A9CCE3;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #F5EEF8;">
 									45. Generative Adversarial Networks(GAN)
 								</div>
 
