--- a/index.html
+++ b/index.html
@@ -332,191 +332,191 @@
 						<!-- Start Portfolio Content -->
 						<div class="mu-portfolio-content">
 							<div class="filtr-container">
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FFFFFF;">
 									0. 서문
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FFFFFF;">
 									1. Deep Learning으로 무엇을 하고자 하는가?
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FFFFFF;">
 									2. Deep Learning에서 사용하는 data 형식
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FFFFFF;">
 									3. Linear Regression 및 Gradient Descent Algorithm
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FFFFFF;">
 									4. 미분
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FFFFFF;">
 									5. Matrix 연산
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1" style="height:130px; background-color: #FFFFFF;">
 									6. Linear and Nonlinear
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #FFFFFF;">
 									7. Binary Logistic Regression
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #FFFFFF;">
 									8. Multinomial Logistic Regression(Softmax Regression)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2" style="height:130px; background-color: #FFFFFF;">
 									9. Multi-Label Classification
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FFFFFF;">
 									10. Perceptron
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FFFFFF;">
 									11. Loss function
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FFFFFF;">
 									12. Model에 따라 hypothesis와 loss function은 다르다
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FFFFFF;">
 									13. Binary classification model에서 loss function을 MSE로 사용하면 안되나 hoxy?
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #FFFFFF;">
 									14. Representation
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #FFFFFF;">
 									15. Categorical Input Handling
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4" style="height:130px; background-color: #FFFFFF;">
 									16. Embedding
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FFFFFF;">
 									17. Backpropagation Algorithm
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FFFFFF;">
 									18. Gradient Descent Algorithm 적용방식
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FFFFFF;">
 									19. 학습과정 한 눈에 살펴보기(regression model)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FFFFFF;">
 									20. Weight Initialization
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3" style="height:130px; background-color: #FFFFFF;">
 									21. Matrix Multiplication(normal distribution 곱하기 normal distribution)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FFFFFF;">
 									22. Zero-gradient 발생원인 분석
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FFFFFF;">
 									23. Overfitting
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FFFFFF;">
 									24. Regularization 작동원리
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FFFFFF;">
 									25. Batch Normalization
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FFFFFF;">
 									26. Layer Normalization
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FFFFFF;">
 									27. Covariate Shift
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FFFFFF;">
 									28. Feature별 scale(distribution) 차이가 크게 나면 learning speed가 느려지는 이유
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FFFFFF;">
 									29. Coefficient of Determination
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5" style="height:130px; background-color: #FFFFFF;">
 									30. Classification Model Evaluation Metric(평가지표)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FFFFFF;">
 									31. Convolutional Neural Networks(CNN)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FFFFFF;">
 									32. Recurrent Neural Networks(RNN)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FFFFFF;">
 									33. Transfer Learning
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FFFFFF;">
 									34. Deep Residual Learning
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FFFFFF;">
 									35. Similarity, Correlation, and Covariance
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FFFFFF;">
 									36. Image Style Transfer
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FFFFFF;">
 									37. Information Theory
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FFFFFF;">
 									38. Machine learning 과정 한 눈에 살펴보기
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6" style="height:130px; background-color: #FFFFFF;">
 									38. Machine learning 과정 한 눈에 살펴보기
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #FFFFFF;">
 									39. Set
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #FFFFFF;">
 									40. Probability
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #FFFFFF;">
 									41. Bayes" Theorem
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="7" style="height:130px; background-color: #FFFFFF;">
 									42. Maximum Likelihood Estimation(MLE)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #FFFFFF;">
 									43. Autoencoder
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #FDFEFE;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #FFFFFF;">
 									44. Variational Autoencoder(VAE)
 								</div>
 
-								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #F5EEF8;">
+								<div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="8" style="height:130px; background-color: #FFFFFF;">
 									45. Generative Adversarial Networks(GAN)
 								</div>
 
